# simpletext-2025-controlcreativity

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: paws_download.csv  qags_cnndm_download.csv  qags_xsum_download.csv  samsum_download.csv  tofueval_download.csv
my_task_package/: spark.py
notebooks/: Hallucination_Detection_data_download.ipynb  Hallucination_Detection_training.ipynb  LLM_as_a_judge.ipynb  nli_experiments.ipynb
notebooks/eda/: 00-initial-exploration.ipynb
tests/: conftest.py  test_spark.py
user/my-username/: README.md
