[project]
name = "my-task-project"
version = "0.1.1"
authors = [{ name = "Anthony Miyaguchi", email = "acmiyaguchi@gatech.edu" }]
description = "DS@GT CLEF project template"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/clef-project-template"
Issues = "https://github.com/dsgt-kaggle-clef/clef-project-template/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["my_task_package*"]
namespaces = false
